# backend-backend-school

./: .env  .env.example  .gitignore  Makefile  SELECT * FROM shifts;.pgsql  app_start.py  endpoint_auth.py  endpoint_profile.py  fetch_month.html  localhost.crt  localhost.key  login_test.html  messages.html  pyproject.toml  requirements.txt  tables
controllers/: simple_controller.py  users_control.py
database/: calender.py  conn_pool.py  db_auth.py  users.py
deploy/docker/: Dockerfile  Dockerfile.deploy  Dockerfile.deploy.dockerignore  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
frontend/: nitro.json
frontend/public/_nuxt/: 2MO3UiDS.js  2XnhW1Jb.js  BFPhuIw8.js  BKI5z6qF.js  BM3JzJXa.js  BPAiy0OL.js  BTF2oL3X.js  (+69 more)
frontend/server/: package.json
helpers/: password_encrypt.py  singleton.py
html_test/: fetch_month.html  login_test.html  new_user_test.html
models/: auth.py  calender_model.py  users_model.py
nginx/: default  nginx-certbot.env
nginx/cert/: localhost+2-key.pem  localhost+2.pem
nginx/conf.d/: default.conf  example_server.conf.nokey
nginx/loaderio/: loaderio-f4feccfe19dadaa99dfe7e09c6498c98.txt
nginx/user_conf.d/: default.conf
src/: __main__.py  app_start.py  endpoint_profile.py
src/conf/: settings.py
src/controllers/: simple_controller.py
src/database/: calender.py  conn_pool.py  models.py  users.py
src/dto/: calender_model.py  users_model.py
src/helpers/: password_encrypt.py  singleton.py
src/models/: calender_model.py  users_model.py
verification/: private_key.pem  public_key.pem  tokenz.py
(+13 files in other folders)
